# becksman

./: .gitignore  Cargo.toml  LICENSE  NOTES.txt  README.md  install.iss  test_server.sh
Entry/: Entry.cpp  Entry.sln  Entry.vcxproj
assets/: text.ini  unc.ini  zh_cn.ini
becks_client/: Cargo.toml
becks_client/becks_network/: Cargo.toml
becks_client/becks_network/src/: config.rs  lib.rs  prelude.rs  util.rs
becks_client/becks_network/src/crew/: data.rs  list.rs  mod.rs
becks_client/becks_network/src/login/: auth.rs  mod.rs  update.rs
becks_client/becks_network/src/mat/: data.rs  list.rs  mod.rs
becks_client/becks_network/src/poster/: data.rs  list.rs  mod.rs
becks_client/src/: entry.rs  lib.rs  main.rs  panel.rs  prelude.rs
becks_client/src/arrange/: arr.rs  group.rs  mod.rs
becks_client/src/assets/: font.rs  icon.rs  mod.rs  text.rs
becks_client/src/panels/: lobby.rs  login.rs  mod.rs  poster_panel.rs
becks_client/src/panels/crew/: crew_create.rs  crew_info.rs  crew_panel.rs  crew_query.rs  mod.rs
becks_client/src/panels/mat/: mat_arrange.rs  mat_create.rs  mat_panel.rs  mod.rs
becks_client/src/panels/poster/: mod.rs  poster_create.rs  poster_panel.rs  poster_query.rs  poster_view.rs
becks_client/src/repr/: crew_repr.rs  mat_repr.rs  mod.rs  types.rs
becks_server/: Cargo.toml
becks_server/becks_convey/: Cargo.toml
becks_server/becks_convey/src/: lib.rs  prelude.rs
becks_server/becks_convey/src/crew/: create.rs  delete.rs  mod.rs  modify.rs  query.rs
becks_server/becks_convey/src/mat/: acquire.rs  create.rs  mod.rs  modify.rs  query.rs
becks_server/becks_convey/src/poster/: acquire.rs  create.rs  mod.rs  modify.rs  query.rs
becks_server/becks_convey/src/user/: auth.rs  clean.rs  mod.rs
becks_server/becks_crew/: Cargo.toml
becks_server/becks_crew/src/: check.rs  choices.rs  data.rs  lib.rs
becks_server/becks_db/: Cargo.toml
becks_server/becks_db/src/: config.rs  handle.rs  lib.rs  login.rs  prelude.rs
becks_server/becks_match/: Cargo.toml
becks_server/becks_match/src/: lib.rs  mat.rs  prelude.rs
becks_server/becks_ops/: Cargo.toml
becks_server/becks_ops/src/: lib.rs  prelude.rs
becks_server/becks_ops/src/crew/: create.rs  delete.rs  mod.rs  modify.rs  query.rs
becks_server/becks_ops/src/mat/: acquire.rs  create.rs  mod.rs  modify.rs  query.rs  update.rs
becks_server/becks_ops/src/poster/: acquire.rs  create.rs  mod.rs  modify.rs  query.rs
becks_server/becks_poster/: Cargo.toml
becks_server/becks_poster/src/: lib.rs  poster.rs
becks_server/becks_user/: Cargo.toml
becks_server/becks_user/src/: check.rs  key.rs  lib.rs
becks_server/src/: lib.rs  main.rs  prelude.rs
becks_server/src/crew/: create.rs  delete.rs  mod.rs  modify.rs  query.rs
becks_server/src/mat/: acquire.rs  create.rs  mod.rs  modify.rs  query.rs
becks_server/src/poster/: acquire.rs  create.rs  mod.rs  modify.rs  query.rs
becks_server/src/user/: acq.rs  auth.rs  clean.rs  mod.rs
src/: main.rs
tools/: clean.sh  requests_test.py  test_client.sh  test_server.sh
