[package]
name = "becksman"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "3"
members = [
    "becks_server",
    "becks_client",
    "becks_server/becks_db",
    "becks_server/becks_ops",
    "becks_server/becks_crew",
    "becks_server/becks_convey",
    "becks_server/becks_match",
]

[dependencies]
