[package]
name = "becks_client"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["system", "tokio"] }
becks_network = { path = "becks_network" }
env_logger = "0.11.6"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["full"] }
bmp = "0.5.0"
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
