[package]
name = "becks_client"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["auto-detect-theme", "image", "system", "tokio"] }
becks_network = { path = "becks_network" }
becks_poster = { path = "../becks_server/becks_poster" }
becks_crew = { path = "../becks_server/becks_crew" }
becks_match = { path = "../becks_server/becks_match" }
env_logger = "0.11.6"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["full"] }
bmp = "0.5.0"
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
rfd = { version = "0.15.2", default-features = false, features = ["ashpd", "pollster", "tokio", "urlencoding", "xdg-portal"] }
rand = "0.9.0"
