[package]
name = "becks_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
becks_db = { path = "becks_db" }
becks_ops = { path = "becks_ops" }
becks_user = { path = "becks_user" }
becks_convey = { path = "becks_convey" }
env_logger = "0.11.6"
indoc = "2.0.5"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
