[package]
name = "becks_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
becks_db = { path = "becks_db" }
becks_ops = { path = "becks_ops" }
becks_crew = { path = "becks_crew" }
becks_convey = { path = "becks_convey" }
becks_match = { path = "becks_match" }
env_logger = "0.11.6"
indoc = "2.0.5"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
json = "0.12.4"
serde_json = "1.0.138"
