[package]
name = "becks_ops"
version = "0.1.0"
edition = "2021"

[dependencies]
becks_crew = { path = "../becks_crew" }
becks_match = { path = "../becks_match" }
becks_db = { path = "../becks_db" }
becks_convey = { path = "../becks_convey" }
becks_poster = { path = "../becks_poster" }
indoc = "2.0.5"
log = "0.4.25"
num_enum = "0.7.3"
rusqlite = "0.33.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
pulldown-cmark = "0.12.2"
